--- a/frontend/src/components/features/ProductArea/ProductArea.css
+++ b/frontend/src/components/features/ProductArea/ProductArea.css
@@ -2,11 +2,13 @@
     padding: 30px;
     background-color: #f9f9f9;
     min-height: 100vh;
+    border-radius: 10px;
+    box-shadow: var(--shadow);
 }
 
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 }
 
